# sget

./: .gitignore  LICENSE  README.md  sget.cabal
.github/: README.md
app/: Main.hs
