cabal-version:      3.0
name:               sget
version:            0.1.0.0
synopsis:           system get, does as it reads
-- description:
homepage:           https://github.com/loureir-or-not/sget
license:            BSD-3-Clause
license-file:       LICENSE
author:             Renato Loureiro
maintainer:         loureiror@proton.me
-- copyright:
category:           System
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable sget
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.17.2.1
    hs-source-dirs:   app
    default-language: GHC2021
